--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   My balance
   <h1>$921.48</h1>
 </div>
-  <img src="images/logo.svg">
+  <img src="images/logo.svg" alt="">
 </div>
 
 <form>
@@ -30,13 +30,13 @@
  <h2> Spending - Last 7 days</h2>
 <ul >
 
-  <div> <div class="point">  40.12 </div>   <div class="chart">   </div> <li>mon</li>  </div>
-  <div> <div class="point">  11.35 </div>   <div class="chart">   </div>  <li>tue</li> </div>
-  <div> <div class="point">  15.36 </div>   <div class="chart">   </div> <li>wed</li>  </div>
-  <div> <div class="point">  52.15 </div>   <div class="chart">   </div>  <li>thu</li> </div>
-  <div> <div class="point"> 40.12  </div>   <div class="chart">   </div>  <li>fri</li> </div>
-  <div> <div class="point">  41.50 </div>   <div class="chart">   </div>  <li>sat</li> </div>
-  <div> <div class="point">  35.12 </div>   <div class="chart">   </div>  <li>sun</li> </div>
+   <li>  <div class="point">  40.12 </div>   <div class="chart">   </div> <div>mon </div>  </li> 
+   <li>  <div class="point">  11.35 </div>   <div class="chart">   </div> <div>tue </div>  </li> 
+   <li>  <div class="point">  15.36 </div>   <div class="chart">   </div> <div>wed  </div>  </li> 
+   <li>  <div class="point">  52.15 </div>   <div class="chart">   </div> <div> thu </div>  </li> 
+   <li>  <div class="point"> 40.12  </div>   <div class="chart">   </div>  <div>fri </div>  </li> 
+   <li>  <div class="point">  41.50 </div>   <div class="chart">   </div> <div> sat </div>  </li> 
+   <li>  <div class="point">  35.12 </div>   <div class="chart">   </div>  <div>sun </div>  </li> 
 </ul>
 
 <hr>
@@ -54,7 +54,7 @@
 </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/marat2000" target="_blank">Marat Azoyan</a>.
   </div>
   <script src="main.js"></script>
 </body>
