--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
   </div>
   </form>
 </main>
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/marat2000" target="_blank">Marat Azoyan</a>.
-  </div>
+  </footer>
   <script src="main.js"></script>
 </body>
 </html>
